testData/annotator/annotatorTest.pas
var
  a, b: <error descr="Undeclared identifier">_undeclaredType</error>;
const c = 1;
begin
  <caret>;
end.